# skypro_coursework_1

./: .env.example  .flake8  REAMDE.md  log.txt  pyproject.toml
data/: user_settings.json
src/: reports.py  services.py  spending_by_category_20260108_165358.json  utils.py  views.py
